# LoganTann

./: .gitmodules  README.md  homeworks.md
.github/DISCUSSION_TEMPLATE/: Faced-issues-and-how-I-solved-them.yml
homeworks_files/18-19-perso/CrossCode-NyanIt/: LICENSE  README.md  mod_init.js  nyan.css  nyan.js  package.json  test.html
homeworks_files/18-19-perso/OpenMascot/: .gitignore  LICENSE  README.md  doc.md
homeworks_files/18-19-perso/OpenMascot/builds/: CMakeLists.txt
homeworks_files/18-19-perso/fr/: LICENSE  _config.yml  notions.md  readme.md
homeworks_files/18-19-perso/tumblr-image-downloader/: README.md
homeworks_files/19-20-ISN/: readme.md
homeworks_files/19-20-ISN/PJ-Final-panneau/: CONTRIBUTING.md  README.md  index.php  panneau.php  style.css
homeworks_files/19-20-ISN/TP-html/: index.html  now.html  old.html  style.css
homeworks_files/19-20-ISN/TP-images/: ISN-chap08-codageImage-eleve.py  pasExo.py
homeworks_files/19-20-ISN/TP-touche-coule/: core.py  ia.py  main.py
homeworks_files/19-20-ISN/lycee-covid19/: README.md  discord-intro.md
homeworks_files/20-21-dut/: readme.md
homeworks_files/20-21-dut/BPO-PJ1/: .classpath  .gitignore  .project  readme.md
homeworks_files/20-21-dut/IAP-PJ1/: sprint.c  (+4 more)
homeworks_files/21-22-dut/: PeriodeA__Droit__transhumanisme-diapo.pptx  PeriodeA__Droit__transhumanisme-script.md  readme.md
homeworks_files/21-22-dut-2/: PeriodeA__Droit__transhumanisme-script.md  readme.md
homeworks_files/23-24-efrei/: readme.md
homeworks_files/23-24-efrei-M1/: README.md  S8-ML-PJ.ipynb
homeworks_private/: README.md
(+322 files in other folders)
